# tasks-api

./: .env  .env.db  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
tasks/: config.py  settings.py  urls.py
tasks/controllers/: task_controller.py
tasks/dtos/: create_task_request.py  task_list_response.py  task_response.py
tasks/migrations/: 0001_initial.py
tasks/models/: task.py
tasks/repositories/: task_repository.py
tasks/services/: task_service.py
